fix(12-Text-Decorations):Finish tutorial-3 Update some word and letter spacing

--- a/12-Text-Decorations/tutorial-3/styles/fonts.css
+++ b/12-Text-Decorations/tutorial-3/styles/fonts.css
@@ -9,7 +9,7 @@
 
 /* PT Sans*/
 @font-face {
-  font-family: 'PT Sans';
+  font-family: 'PT-Sans';
   font-style: normal;
   font-weight: 400;
   src: local('PT Sans'), local('PTSans-Regular'), url(../fonts/PT\ Sans.woff2) format('woff2');
